k8s/url-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-service-deployment
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-service
  template:
    metadata:
      labels:
        app: url-service
    spec:
      containers:
      - name: url-service
        image: url-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
