k8s/url-service/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: url-service-ingress
  namespace: url-shortener
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`localhost`) && PathPrefix(`/url`)
    kind: Rule
    services:
    - name: url-service
      port: http
